--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body, html {
 
 #root {
   overflow-x: hidden !important;
+  overflow-y: hidden !important;
   max-width: 100vw;
   width: 100%;
 }
@@ -20,4 +21,5 @@ body, html {
 body > * {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
